añadido la parte de imágen